# clipy-show

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json  settings.local.json
.github/workflows/: visual-regression.yml
Formula/: cliip-show.rb
docs/: Homebrewで公開する手順.md  development.md
packaging/homebrew/: cliip-show.rb.template  clip-show.rb.template
scripts/: local_check.sh  visual_regression.sh
scripts/homebrew/: generate_formula.sh
src/: main.rs
