[package]
name = "cliip-show"
version = "0.1.2"
edition = "2021"

[dependencies]
objc2 = { version = "0.5", features = ["relax-sign-encoding", "relax-void-encoding"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
objc2-app-kit = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
